syntax = "proto3";

package employee;

option go_package = "./proto;proto";

message Employee {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string company = 4;
  string health = 5;
}

message AddEmployeeRequest {
  string name = 1;
  int32 age = 2;
  string company = 3;
  string health = 4;
}

message AddEmployeeResponse {
  Employee employee = 1;
}

message GetEmployeesRequest {}
message GetEmployeesResponse {
  repeated Employee employees = 1;
}

service EmployeeService {
  rpc GetEmployees (GetEmployeesRequest) returns (GetEmployeesResponse);
  rpc AddEmployee (AddEmployeeRequest) returns (AddEmployeeResponse);
}
